Multiple return sequences

--- a/clean_gensum.ipynb
+++ b/clean_gensum.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/crfm-helm2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from helm.benchmark.runner import InstanceGenerations,GenerationSummary\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +67,7 @@
        "['A', 'A', 'A']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,24 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path is /Users/lukecadigan/thesis/helm/jsons/128_wmt.json\n",
+      "path is /Users/lukecadigan/thesis/helm/jsons/olmo_instruct.json\n",
       "about to load!\n",
       "finished loading!\n",
-      "/Users/lukecadigan/thesis/helm/jsons/128_wmt_clean.json\n"
+      "/Users/lukecadigan/thesis/helm/jsons/olmo_instruct_clean.json\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# file_base=\"/Users/lukecadigan/thesis/helm/jsons/instruct_summary\"\n",
-    "file_base=\"/Users/lukecadigan/thesis/helm/jsons/128_wmt\"\n",
+    "# file_base=\"/Users/lukecadigan/thesis/helm/jsons/128_wmt\"\n",
+    "file_base=\"/Users/lukecadigan/thesis/helm/jsons/olmo_instruct\"\n",
     "\n",
     "path=file_base+\".json\"\n",
     "print(f\"path is {path}\")\n",
