TASK_NAMES change

--- a/process_gens.ipynb
+++ b/process_gens.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/crfm-helm2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "PyTorch version 2.6.0 available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import process_gens\n",
     "import pandas as pd\n",
@@ -33,34 +23,42 @@
     "    PerturbationDescription)\n",
     "from dataclasses import dataclass\n",
     "from process_gens import ProcessGens\n",
-    "from process_gen_utils import *"
+    "# from process_gen_utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'base_folder'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m base_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mroot_folder\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/eval_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00meval_instances\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     26\u001b[0m custom_metrics\u001b[38;5;241m=\u001b[39m[ PostMetric\u001b[38;5;241m.\u001b[39mBLEU1_METRIC(),PostMetric\u001b[38;5;241m.\u001b[39mBLEU4_METRIC()]\n\u001b[0;32m---> 27\u001b[0m processGens\u001b[38;5;241m=\u001b[39m \u001b[43mProcessGens\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase_folder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbase_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43mnum_beams_list\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_beams_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmodels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcustom_metrics\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcustom_metrics\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtask_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtask_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meval_instances\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43meval_instances\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minstance_metrics\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minstance_metrics\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'base_folder'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# # copied snellius test\n",
-    "num_beams_list=[32, 64]\n",
-    "models=[\"meta_llama_Llama_3.1_8B_Instruct\"]\n",
-    "eval_instances=5\n",
-    "task_name=\"wmt_14_language_pair_de_en_\"\n",
-    "root_folder=f\"snellius_copies/wmt_test\"\n",
+    "def get_metrics(mode):\n",
+    "    if(mode==\"wmt\"):\n",
+    "        task_name=\"wmt\"\n",
+    "        custom_metrics=[ PostMetric.BLEU1_METRIC(),PostMetric.BLEU4_METRIC()]\n",
+    "        instance_metrics=[\"comet\"]\n",
+    "    if(mode==\"instruct\"):\n",
+    "        task_names=[\"open_assistant:language=en,num_respondents=1, self_instruct:num_respondents=1,\"]\n",
+    "        custom_metrics=[]\n",
+    "        instance_metrics=[]\n",
+    "    return task_names, custom_metrics, instance_metrics\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "# # copied snellius test\n",
+    "# num_beams_list=[32, 64]\n",
+    "# models=[\"meta_llama_Llama_3.1_8B_Instruct\"]\n",
+    "# eval_instances=5\n",
+    "# task_name=\"wmt_14_language_pair_de_en_\"\n",
+    "# root_folder=f\"snellius_copies/wmt_test\"\n",
+    "# instance_metrics=[\"comet\"]\n",
     "\n",
     "# #local test\n",
     "# num_beams_list=[15,20]\n",
@@ -74,22 +72,7 @@
     "\n",
     "# models=[\"meta_llama_Llama_3.1_8B_Instruct\"]\n",
     "# eval_instances=1000\n",
-    "# root_folder=f\"snellius_copies/full\"\n",
-    "# task_name=\"wmt\"\n",
-    "\n",
-    "instance_metrics=[\"comet\"]\n",
-    "base_folder=f\"{root_folder}/eval_{eval_instances}\"\n",
-    "custom_metrics=[ PostMetric.BLEU1_METRIC(),PostMetric.BLEU4_METRIC()]\n",
-    "processGens= ProcessGens(base_folder=base_folder,num_beams_list=num_beams_list,models=models,custom_metrics=custom_metrics,task_name=task_name, eval_instances=eval_instances, instance_metrics=instance_metrics)\n",
-    "\n",
-    "\n",
-    "# code snellius_copies/wmt_test/eval_4/wmt/meta_llama_Llama_3.1_8B_Instruct/2_beams/runs/eval_4/generation_summary.json\n",
-    "# code snellius_copies/wmt_test/eval_4/wmt/meta_llama_Llama_3.1_8B_Instruct/128_beams/runs/eval_4/generation_summary.json\n",
-    "\n",
-    "# ./wmt_test/eval_32/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/2_beams/runs/eval_32/generation_summary.json\n",
-    "# ./wmt_test/eval_32/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/32_beams/runs/eval_32/generation_summary.json\n",
-    "# ./wmt_test/eval_32/wmt/meta_llama_Llama_3.1_8B_Instruct/32_beams/runs/eval_32/generation_summary.json\n",
-    "\n"
+    "# root_folder=f\"snellius_copies/full\"\n"
    ]
   },
   {
@@ -101,11 +84,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: id24245\tn_unique_text: 64\tn:64\tn_unique_probs\n",
-      "id: id24703\tn_unique_text: 64\tn:64\tn_unique_probs\n",
-      "id: id24769\tn_unique_text: 48\tn:64\tn_unique_probs\n",
-      "id: id20395\tn_unique_text: 64\tn:64\tn_unique_probs\n",
-      "id: id21293\tn_unique_text: 64\tn:64\tn_unique_probs\n"
+      "hello\n",
+      "Analyzing path: snellius_copies/helm_output/instruct_2_evals/open_assistant_language_en_num_respondents_1_/allenai_OLMo_2_1124_13B_Instruct/1_beams/runs/instruct_2_evals/per_instance_stats.json\n",
+      "Getting gen summary from: snellius_copies/helm_output/instruct_2_evals/open_assistant_language_en_num_respondents_1_/allenai_OLMo_2_1124_13B_Instruct/1_beams/runs/instruct_2_evals/generation_summary_metrics.json\n",
+      "number of instances: 2\n",
+      "get_metrics_df\n",
+      "get_instance_info\n",
+      "Getting gen summary from: snellius_copies/helm_output/instruct_2_evals/open_assistant_language_en_num_respondents_1_/allenai_OLMo_2_1124_13B_Instruct/1_beams/runs/instruct_2_evals/generation_summary_metrics.json\n",
+      "Analyzing path: snellius_copies/helm_output/instruct_2_evals/open_assistant_language_en_num_respondents_1_/allenai_OLMo_2_1124_13B_Instruct/1_beams/runs/instruct_2_evals/per_instance_stats.json\n",
+      "calculate_beam_num_to_summary\n",
+      "Getting gen summary from: snellius_copies/helm_output/instruct_2_evals/open_assistant_language_en_num_respondents_1_/allenai_OLMo_2_1124_13B_Instruct/1_beams/runs/instruct_2_evals/generation_summary_metrics.json\n",
+      "number of instances: 2\n",
+      "get_metrics_dict\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #always true\n",
+    "# root_folder=\"snellius_copies/helm_output\"\n",
+    "\n",
+    "# #suite stuff\n",
+    "# mode=\"instruct\"\n",
+    "# suite_name=\"instruct_2_evals\"\n",
+    "# #specifics\n",
+    "# num_beams_list=[1]\n",
+    "# models=[\"allenai_OLMo_2_1124_13B_Instruct\"]\n",
+    "# eval_instances=2\n",
+    "\n",
+    "\n",
+    "\n",
+    "####################### For test #######################\n",
+    "#always true\n",
+    "root_folder=\"helm_output\"\n",
+    "\n",
+    "#suite stuff\n",
+    "mode=\"instruct\"\n",
+    "suite_name=\"instruct_1_evals\"\n",
+    "\n",
+    "#specifics\n",
+    "num_beams_list=[1]\n",
+    "models=[\"allenai_OLMo_2_1124_13B_Instruct\"]\n",
+    "eval_instances=2\n",
+    "\n",
+    "\n",
+    "test_process_gens=ProcessGens()\n",
+    "\n",
+    "task_names, custom_metrics, instance_metrics= get_metrics(mode)\n",
+    "test_process_gens.init(root_folder=root_folder,num_beams_list=num_beams_list,models=models,custom_metrics=custom_metrics,task_names=task_names, eval_instances=eval_instances, suite_name=suite_name,instance_metrics=instance_metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tests\n",
+    "# beam_num_to_instance_stats=test_process_gens.calculate_beam_num_to_run_instance_stats(root_folder=root_folder, num_beams_list=num_beams_list, models=models, task_name=task_name, suite_name=suite_name, instance_metrics=instance_metrics)\n",
+    "# beam_num_to_summary=test_process_gens.calculate_beam_num_to_summary(root_folder=root_folder, num_beams_list=num_beams_list, models=models,eval_instances=eval_instances,task_name=task_name, suite_name=suite_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'completions_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m last_beam\u001b[38;5;241m=\u001b[39mnum_beams_list[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     13\u001b[0m first_beam\u001b[38;5;241m=\u001b[39mnum_beams_list[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m---> 14\u001b[0m compare_beams_by_metric(analysis_df\u001b[38;5;241m=\u001b[39m\u001b[43mcompletions_df\u001b[49m,compare_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutput_logprob\u001b[39m\u001b[38;5;124m'\u001b[39m, compare_beams\u001b[38;5;241m=\u001b[39m[last_beam, first_beam])\n\u001b[1;32m     15\u001b[0m compare_beams_by_metric(analysis_df\u001b[38;5;241m=\u001b[39mcompletions_df,compare_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcomet\u001b[39m\u001b[38;5;124m'\u001b[39m, compare_beams\u001b[38;5;241m=\u001b[39m[last_beam, first_beam])\n\u001b[1;32m     16\u001b[0m plot_keys(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompletion_logprob\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBLEU\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'completions_df' is not defined"
      ]
     }
    ],
@@ -132,28 +184,6 @@
     "\n",
     "\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'metric_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[63], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     plt\u001b[38;5;241m.\u001b[39mplot(np\u001b[38;5;241m.\u001b[39munique(x), np\u001b[38;5;241m.\u001b[39mpoly1d(np\u001b[38;5;241m.\u001b[39mpolyfit(x, y, \u001b[38;5;241m1\u001b[39m))(np\u001b[38;5;241m.\u001b[39munique(x)))\n\u001b[1;32m     11\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m---> 13\u001b[0m \u001b[43mplot_keys\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcompletion_logprob\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBLEU\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[63], line 5\u001b[0m, in \u001b[0;36mplot_keys\u001b[0;34m(xlabel, ylabel)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplot_keys\u001b[39m(xlabel, ylabel):\n\u001b[0;32m----> 5\u001b[0m     x\u001b[38;5;241m=\u001b[39m\u001b[43mmetric_df\u001b[49m[xlabel]\n\u001b[1;32m      6\u001b[0m     y\u001b[38;5;241m=\u001b[39mdf[ylabel]\n\u001b[1;32m      7\u001b[0m     plt\u001b[38;5;241m.\u001b[39mscatter(x,y)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'metric_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
     "\n"
    ]
   }
