Process Gens revert

--- a/process_samples.ipynb
+++ b/process_samples.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/crfm-helm2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "PyTorch version 2.6.0 available.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_metrics_df\n",
-      "get_instance_info\n",
-      "Getting gen summary from: snellius_copies/helm_output/sample_return_20_eval_500/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_return_20_eval_500/generation_summary_metrics.json\n",
-      "Analyzing path: snellius_copies/helm_output/sample_return_20_eval_500/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_return_20_eval_500/per_instance_stats.json\n",
-      "calculate_beam_num_to_summary\n",
-      "Getting gen summary from: snellius_copies/helm_output/sample_return_20_eval_500/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_return_20_eval_500/generation_summary_metrics.json\n",
-      "number of instances: 500\n",
+      "Init: process_gens_mode full_sample\n",
+      "calculate_gen_summary_dict\n",
       "get_metrics_dict\n"
      ]
     },
@@ -63,51 +67,49 @@
     "    PerturbationDescription)\n",
     "from dataclasses import dataclass\n",
     "from process_gens import *\n",
-    "root_folder, num_beams_list, models, custom_metrics, task_names, eval_instances, suite_name, instance_metrics= get_process_gen_params(\"full_sample\")\n",
     "\n",
     "\n",
     "\n",
     "processGens=ProcessGens()\n",
-    "processGens.init(root_folder=root_folder,num_beams_list=num_beams_list,models=models,custom_metrics=custom_metrics,task_names=task_names, eval_instances=eval_instances, suite_name=suite_name,instance_metrics=instance_metrics)\n",
-    "\n"
+    "processGens.init_with_mode(\"full_sample\")\n",
+    "root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics = processGens.get_params()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval_instances 500\n",
       "sum(num_beams_list) 1\n",
-      "Index(['example_comet', 'text', 'completion_length', 'output_logprob',\n",
-      "       'instanceID', 'isCompletion', 'BLEU_1', 'BLEU_4', 'beam_num'],\n",
+      "Index(['example_comet', 'beam_num', 'task_name', 'model', 'text',\n",
+      "       'completion_length', 'output_logprob', 'instanceID', 'isCompletion',\n",
+      "       'BLEU_1', 'BLEU_4'],\n",
       "      dtype='object')\n",
       "Num examples: 10000\n",
       "Num completions: 500\n",
-      "   comet_score                                               text  \\\n",
-      "0     0.816450  He advised the parents of a boy whose penis ha...   \n",
-      "1     0.810512  He advised the parents of a boy whose penis ha...   \n",
+      "   comet_score  beam_num  task_name  model  \\\n",
+      "0     0.816450         1          0      0   \n",
+      "1     0.810512         1          0      0   \n",
       "\n",
-      "   completion_length  output_logprob instanceID isCompletion    BLEU_1  \\\n",
-      "0                184      -26.494815    id24245         True  0.684211   \n",
-      "1                188      -26.578332    id24245         None  0.657895   \n",
+      "                                                text  completion_length  \\\n",
+      "0  He advised the parents of a boy whose penis ha...                184   \n",
+      "1  He advised the parents of a boy whose penis ha...                188   \n",
       "\n",
-      "     BLEU_4  beam_num  \n",
-      "0  0.428571         1  \n",
-      "1  0.314286         1  \n"
+      "   output_logprob instanceID isCompletion    BLEU_1    BLEU_4  \n",
+      "0      -26.494815    id24245         True  0.684211  0.428571  \n",
+      "1      -26.578332    id24245         None  0.657895  0.314286  \n"
      ]
     }
    ],
    "source": [
     "\n",
     "from process_gen_utils import *\n",
-    "print(f\"eval_instances {eval_instances}\")\n",
     "print(f\"sum(num_beams_list) {sum(num_beams_list)}\")\n",
-    "examples_df, completions_df=get_dfs(processGens, eval_instances, num_beams_list)\n",
+    "examples_df, completions_df=get_dfs(processGens, num_beams_list)\n",
     "\n",
     "# for df in examples_df, completions_df:\n",
     "examples_df=examples_df.rename(columns={\"example_comet\": \"comet_score\"})\n",
