--- a/process_samples.ipynb
+++ b/process_samples.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,9 @@
       "\n",
       "   output_logprob instanceID isCompletion  final_num_exact_match  \n",
       "0      -41.192953     id8131         True               0.248285  \n",
-      "1      -44.047876     id8131         None               0.527523  \n"
+      "1      -44.047876     id8131         None               0.527523  \n",
+      "10000\n",
+      "1000\n"
      ]
     }
    ],
@@ -161,6 +163,8 @@
     "# for df in examples_df, completions_df:\n",
     "\n",
     "print(examples_df.head(2))\n",
+    "print(len(examples_df))\n",
+    "print(len(completions_df))\n",
     "\n"
    ]
   },
@@ -276,20 +280,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample_10_eval_1000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(suite_name)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
