--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -169,6 +169,34 @@
     "import numpy as np\n",
     "tensor_batch_logits = np.asarray(batch_logits)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(2), np.int64(8)]\n",
+      "[np.int64(2)]\n",
+      "[np.int64(8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def sample(first_eval_instance,max_eval_instances):\n",
+    "    print(selected_eval_instances)\n",
+    "\n",
+    "#ok, 2, 8\n",
+    "\n",
+    "sample(0,2)\n",
+    "sample(0,1)\n",
+    "sample(1,1)\n"
+   ]
   }
  ],
  "metadata": {
