--- a/notebooks/misc/model_test.ipynb
+++ b/notebooks/misc/model_test.ipynb
@@ -172,30 +172,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[np.int64(2), np.int64(8)]\n",
-      "[np.int64(2)]\n",
-      "[np.int64(8)]\n"
+      "m size      :\ttorch.Size([2, 18]) pad_tuple [0, 1, 0, 0]\n",
+      "m size      :\ttorch.Size([2, 19]) pad_tuple [0, 0, 0, 0]\n",
+      "outside: m1:torch.Size([2, 19]) \tm2:torch.Size([2, 19])\n",
+      "m size      :\ttorch.Size([10, 2, 50257]) pad_tuple [0, 0, 0, 0, 0, 1]\n",
+      "m size      :\ttorch.Size([11, 2, 50257]) pad_tuple [0, 0, 0, 0, 0, 0]\n",
+      "outside: m1:torch.Size([11, 2, 50257]) \tm2:torch.Size([11, 2, 50257])\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import torch\n",
     "\n",
-    "def sample(first_eval_instance,max_eval_instances):\n",
-    "    print(selected_eval_instances)\n",
     "\n",
-    "#ok, 2, 8\n",
+    "def pad_to_dim(m, correct_sizes, axes, num_dim, cat_axis, pad_value):\n",
+    "    \n",
+    "    pad_tuple = [0]*(2*num_dim)\n",
     "\n",
-    "sample(0,2)\n",
-    "sample(0,1)\n",
-    "sample(1,1)\n"
+    "    for axis in axes:\n",
+    "        if axis != cat_axis:\n",
+    "            diff = correct_sizes[axis]-m.size(axis) \n",
+    "            if  diff != 0:\n",
+    "                pad_tuple[2*((num_dim-1)-axis)+1] = diff\n",
+    "    print(f\"m size      :\\t{m.size()} pad_tuple {pad_tuple}\")\n",
+    "    return torch.nn.functional.pad(input=m, pad=pad_tuple, value=pad_value)\n",
+    "    \n",
+    "\n",
+    "def match_sizes(m1, m2,cat_axis, pad_value):\n",
+    "    #if they're the same size\n",
+    "    s1=list(m1.size())\n",
+    "    s2=list(m2.size())\n",
+    "    s1.pop(cat_axis)\n",
+    "    s2.pop(cat_axis)\n",
+    "    if s1 == s2:\n",
+    "        print(\"Same size!!!\")\n",
+    "        return\n",
+    "\n",
+    "    num_dim=len(m1.size())\n",
+    "    axes=list(range(num_dim))\n",
+    "    correct_sizes= [max(m1.size(axis),m2.size(axis)) for axis in axes]\n",
+    "    m1=pad_to_dim(m1, correct_sizes, axes, num_dim, cat_axis, pad_value)\n",
+    "    m2=pad_to_dim(m2, correct_sizes, axes, num_dim, cat_axis, pad_value)\n",
+    "    return m1, m2\n",
+    "\n",
+    "\n",
+    "def safe_append_tensor(tensor_agg, batch_tensor, cat_axis, pad_value):\n",
+    "    if tensor_agg is None:\n",
+    "        return batch_tensor\n",
+    "    \n",
+    "    tensor_agg, batch_tensor=match_sizes(tensor_agg, batch_tensor,cat_axis, pad_value)\n",
+    "    print(f\"outside: m1:{tensor_agg.size()} \\tm2:{batch_tensor.size()}\")\n",
+    "    \n",
+    "    \n",
+    "    return  torch.cat((tensor_agg,batch_tensor), axis=cat_axis)\n",
+    "\n",
+    "\n",
+    "# torch.nn.functional.pad(input, pad, mode='constant', value=None)\n",
+    "\n",
+    "\n",
+    "batch_size=2\n",
+    "prompt_len=9\n",
+    "new_token_len=10\n",
+    "output_len_full=19\n",
+    "pad_value=-1\n",
+    "\n",
+    "\n",
+    "sequences=torch.empty(2, 18)\n",
+    "batch_sequences=torch.empty(2, 19)\n",
+    "\n",
+    "sequences=safe_append_tensor(sequences, batch_sequences, cat_axis=0)\n",
+    "\n",
+    "\n",
+    "sequences=torch.empty(10, 2, 50257)\n",
+    "batch_sequences=torch.empty(11, 2, 50257)\n",
+    "\n",
+    "sequences=safe_append_tensor(sequences, batch_sequences, cat_axis=1, pad_value=pad_value)\n",
+    "\n",
+    "\n",
+    "#should be 4 by 19\n",
+    "# print(\"sequences size is \",sequences.size())\n",
+    "\n",
+    "\n",
+    "# torch.Size([10, 2, 50257])\n",
+    "\n",
+    "\n",
+    "#I believe:\n",
+    "\n",
+    "# torch.Size([2, 19])\n",
+    "# torch.Size([10, 2, 50257])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AutoTokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m \u001b[43mAutoTokenizer\u001b[49m\u001b[38;5;241m.\u001b[39mfrom_pretrained(model_name)\n\u001b[1;32m      2\u001b[0m eos_token \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39meos_token\n\u001b[1;32m      3\u001b[0m bos_token \u001b[38;5;241m=\u001b[39m tokenizer\u001b[38;5;241m.\u001b[39mbos_token\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'AutoTokenizer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "eos_token = tokenizer.eos_token\n",
+    "bos_token = tokenizer.bos_token\n"
    ]
   }
  ],
