--- a/notebooks/first_results.ipynb
+++ b/notebooks/first_results.ipynb
@@ -86,14 +86,23 @@
     "processGens=ProcessGens()\n",
     "\n",
     "#wmt modes\n",
-    "process_gen_modes=[\"wmt_samples0\", \"wmt_samples1\", \"wmt_samples2_1\",\"wmt_samples2_2\"]\n",
+    "# process_gen_mode=\"wmt_single\"\n",
+    "# process_gen_mode=\"wmt_samples\"\n",
+    "# process_gen_mode=\"wmt_single\"\n",
+    "# process_gen_modes=[\"wmt_samples0\", \"wmt_samples1\", \"wmt_samples2_1\",\"wmt_samples2_2\"]\n",
+    "\n",
+    "# process_gen_mode=\"wmt_sample_100\"\n",
+    "# process_gen_mode=\"wmt_sample_50\"\n",
+    "    # wmt_sample_100\n",
+    "    \n",
+    "# compare_metric=\"example_comet\"\n",
+    "# compare_metric=\"BLEU_4\"\n",
     "\n",
     "\n",
     "# process_gen_modes=[\"gsm_samples1\",\"gsm_samples2\",\"gsm_samples3\"]\n",
-    "process_gen_modes=[\"fairseq_softmax\"]\n",
+    "process_gen_modes=[\"current_test\"]\n",
     "\n",
     "\n",
-    "#5 threads for llama1, \n",
     "\n",
     "do_norm_analysis=True\n",
     "processGens.init_with_mode(process_gen_modes)\n",
@@ -103,6 +112,7 @@
     "\n",
     "\n",
     "dfs_by_model={}\n",
+    "\n",
     "for model_name in examples_df['model'].unique():\n",
     "    filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
     "    dfs_by_model[model_name]=filtered_df\n",
