--- a/notebooks/results/qwen_wmt.ipynb
+++ b/notebooks/results/qwen_wmt.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "#wmt modes\n",
     "\n",
-    "process_gen_modes=[\"wmt_samples4\",\"llama_template\"]\n",
+    "process_gen_modes=[\"wmt_samples4\"]\n",
     "\n",
     "\n",
     "\n",
