--- a/notebooks/misc/convert_fairseq.ipynb
+++ b/notebooks/misc/convert_fairseq.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,10 +170,10 @@
    "source": [
     "\n",
     "\n",
-    "# fairseq_output=\"/Users/lukecadigan/thesis/fairseq/softmax_generate_results.txt\"\n",
-    "# fairseq_output=\"/Users/lukecadigan/thesis/helm/softmax_results_mini.txt\"\n",
-    "# '/Users/lukecadigan/thesis/fairseq/softmax_results/seed_0/generate-test.txt'\n",
-    "# fairseq_output=\"/Users/lukecadigan/thesis/fairseq/results/iwslt/softmax/\"\n",
+    "# fairseq_output=f\"/Users/lukecadigan/thesis/fairseq/{activation}_generate_results.txt\"\n",
+    "# fairseq_output=f\"/Users/lukecadigan/thesis/helm/{activation}_results_mini.txt\"\n",
+    "# '/Users/lukecadigan/thesis/fairseq/{activation}_results/seed_0/generate-test.txt'\n",
+    "# fairseq_output=\"/Users/lukecadigan/thesis/fairseq/results/iwslt/{activation}/\"\n",
     "\n",
     "def get_fairset_output_from_lines(lines) -> FairseqOutput:\n",
     "    fairseq_output= FairseqOutput()\n",
@@ -241,9 +241,11 @@
     "fairseq_output_by_id={}\n",
     "max_num_lines=1000\n",
     "\n",
+    "\n",
+    "activation=\"sparsemax\"\n",
     "for seed in range(100):\n",
     "    print(f\"Processing seed {seed}\")\n",
-    "    fairseq_file=f\"/Users/lukecadigan/thesis/fairseq/results/iwslt/softmax/seed_{seed}/generate-test.txt\"\n",
+    "    fairseq_file=f\"/Users/lukecadigan/thesis/fairseq/results/iwslt/{activation}/seed_{seed}/generate-test.txt\"\n",
     "    step_size=5\n",
     "\n",
     "    \n",
@@ -267,28 +269,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing 12960294 characters to snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_softmax/1_beams/runs/fairseq/generation_summary.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from helm.common.general import write, asdict_without_nones\n",
     "\n",
-    "\n",
-    "output_file_name=\"snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_softmax/1_beams/runs/fairseq/generation_summary.json\"\n",
+    "# activation=\"sparsemax\"\n",
+    "output_file_name=f\"snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_{activation}/1_beams/runs/fairseq/generation_summary.json\"\n",
     "\n",
     "\n",
     "write(\n",
     "    output_file_name,\n",
     "    json.dumps(asdict_without_nones(generation_summary),indent=2)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "      \n",
+      "LOCAL_FILE=snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_sparsemax/1_beams/runs/fairseq/generation_summary.json\n",
+      "REMOTE_DIR_EXT=helm/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_sparsemax/1_beams/runs/fairseq\n",
+      "echo scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
+      "scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "\n",
+    "      \n",
+    "LOCAL_FILE={output_file_name}\n",
+    "REMOTE_DIR_EXT=helm/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_{activation}/1_beams/runs/fairseq\n",
+    "echo scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
+    "scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
+    "\"\"\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
