--- a/notebooks/results/gsm.ipynb
+++ b/notebooks/results/gsm.ipynb
@@ -13,31 +13,6 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "PyTorch version 2.6.0 available.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init: process_gens_mode ['gsm_samples1_1', 'gsm_samples1_2', 'gsm_samples1_3', 'gsm_samples2']\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_20_first_inst_0/gsm_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_100_eval_20_first_inst_0\n",
-      "get_metrics_dict\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_80_first_inst_20/gsm_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_100_eval_80_first_inst_20\n",
-      "get_metrics_dict\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_400_first_inst_100/gsm_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_100_eval_400_first_inst_100\n",
-      "get_metrics_dict\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_500_first_inst_0/gsm_/Qwen_Qwen3_8B/1_beams/runs/sample_100_eval_500_first_inst_0\n",
-      "get_metrics_dict\n",
-      "Index(['beam_num', 'task_name', 'model', 'example_idx', 'rank', 'suite',\n",
-      "       'instanceID', 'text', 'completion_length', 'output_logprob',\n",
-      "       'isCompletion', 'final_num_exact_match', 'example_exact_match'],\n",
-      "      dtype='object')\n",
-      "Num examples: 100000\n",
-      "Num completions: 1000\n"
-     ]
     }
    ],
    "source": [
@@ -63,35 +38,37 @@
     "\n",
     "\n",
     "\n",
-    "processGens=ProcessGens()\n",
+    "\n",
     "\n",
     "process_gen_modes=[ \"gsm_samples1_1\",\"gsm_samples1_2\",\"gsm_samples1_3\", \"gsm_samples2\"]\n",
-    "# process_gen_modes=[ \"gsm_samples2\"]\n",
+    "\n",
+    "dfs_by_model,processGens,(root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric)= get_dfs_by_model(process_gen_modes)\n",
+    "examples_df = pd.concat(list(dfs_by_model.values()))\n",
     "\n",
     "\n",
     "\n",
+    "# processGens=ProcessGens()\n",
+    "# do_norm_analysis=True\n",
+    "# processGens.init_with_mode(process_gen_modes)\n",
+    "# root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric = processGens.get_params()\n",
+    "# examples_df, completions_df=get_dfs(processGens)\n",
     "\n",
-    "do_norm_analysis=True\n",
-    "processGens.init_with_mode(process_gen_modes)\n",
-    "root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric = processGens.get_params()\n",
-    "examples_df, completions_df=get_dfs(processGens)\n",
+    "# #self-instruct and vicuna\n",
     "\n",
-    "#self-instruct and vicuna\n",
+    "# dfs_by_model={}\n",
     "\n",
-    "dfs_by_model={}\n",
+    "# for model_name in examples_df['model'].unique():\n",
+    "#     filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
+    "#     dfs_by_model[model_name]=filtered_df\n",
     "\n",
-    "for model_name in examples_df['model'].unique():\n",
-    "    filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
-    "    dfs_by_model[model_name]=filtered_df\n",
-    "\n",
-    "all_dfs_by_model=dfs_by_model\n",
+    "# all_dfs_by_model=dfs_by_model\n",
     "# if(len(models)>1):\n",
     "    # all_dfs_by_model[\"all_models\"]=examples_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +98,6 @@
       "0      -28.083370         True                      0                    0  \n",
       "1      -50.578573         None                      1                    0  \n",
       "num examples 100000\n",
-      "num_completions 1000\n",
       "compare_metric mean:  final_num_exact_match    0.63865\n",
       "dtype: float64\n",
       "dict_keys(['meta_llama_Llama_3.1_8B_Instruct', 'Qwen_Qwen3_8B'])\n"
@@ -134,7 +110,6 @@
     "# instanceGeneration=get_first(processGens.first_run_instances)\n",
     "print(examples_df.head(2))\n",
     "print(\"num examples\" ,len(examples_df))\n",
-    "print(\"num_completions\", len(completions_df))\n",
     "print(f\"compare_metric mean: \",examples_df[[compare_metric]].mean())\n",
     "#current belief: for each run_folder combo, there will be 100 instances and 100 examples per instance\n",
     "\n",
@@ -143,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
