--- a/notebooks/results/instruct.ipynb
+++ b/notebooks/results/instruct.ipynb
@@ -18,6 +18,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "----------------\n",
+      " NOTE: ONLY PRINTING 4 tasks ----------------\n",
+      "\n",
+      "Could not find file snellius_copies/helm_output/sample_100_eval_100_first_inst_0/grammar_path_src_helm_benchmark_scenarios_best_chatgpt_prompts.yaml_tags_num_respondents_1_/Qwen_Qwen3_8B/1_beams/runs/sample_100_eval_100_first_inst_0/example_df.pkl\n",
+      "Recalculate everything!!!!!\n",
       "Init: process_gens_mode ['instruct']\n",
       "\n",
       "\n",
@@ -64,26 +71,29 @@
     "\n",
     "\n",
     "\n",
-    "processGens=ProcessGens()\n",
+    "\n",
     "\n",
     "process_gen_modes=[\"instruct\"]\n",
     "\n",
+    "dfs_by_model,processGens,(root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric)= get_dfs_by_model(process_gen_modes)\n",
+    "examples_df = pd.concat(list(dfs_by_model.values()))\n",
     "\n",
     "\n",
-    "do_norm_analysis=True\n",
-    "processGens.init_with_mode(process_gen_modes)\n",
-    "root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric = processGens.get_params()\n",
-    "examples_df, completions_df=get_dfs(processGens)\n",
+    "# processGens=ProcessGens()\n",
+    "# do_norm_analysis=True\n",
+    "# processGens.init_with_mode(process_gen_modes)\n",
+    "# root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric = processGens.get_params()\n",
+    "# examples_df, completions_df=get_dfs(processGens)\n",
     "\n",
-    "#self-instruct and vicuna\n",
+    "# #self-instruct and vicuna\n",
     "\n",
-    "dfs_by_model={}\n",
+    "# dfs_by_model={}\n",
     "\n",
-    "for model_name in examples_df['model'].unique():\n",
-    "    filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
-    "    dfs_by_model[model_name]=filtered_df\n",
+    "# for model_name in examples_df['model'].unique():\n",
+    "#     filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
+    "#     dfs_by_model[model_name]=filtered_df\n",
     "\n",
-    "all_dfs_by_model=dfs_by_model\n",
+    "# all_dfs_by_model=dfs_by_model\n",
     "# if(len(models)>1):\n",
     "    # all_dfs_by_model[\"all_models\"]=examples_df"
    ]
@@ -116,7 +126,6 @@
       "0                  9       -0.137071         True  \n",
       "1                  9       -0.137071         None  \n",
       "num examples 58000\n",
-      "num_completions 580\n",
       "compare_metric mean:  example_themis    4.183672\n",
       "dtype: float64\n"
      ]
@@ -128,7 +137,6 @@
     "# instanceGeneration=get_first(processGens.first_run_instances)\n",
     "print(examples_df.head(2))\n",
     "print(\"num examples\" ,len(examples_df))\n",
-    "print(\"num_completions\", len(completions_df))\n",
     "print(f\"compare_metric mean: \",examples_df[[compare_metric]].mean())\n",
     "#current belief: for each run_folder combo, there will be 100 instances and 100 examples per instance"
    ]
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,17 +207,7 @@
      "output_type": "stream",
      "text": [
       "  0% (0 of 11) |                         | Elapsed Time: 0:00:00 ETA:  --:--:--\n",
-      " 18% (2 of 11) |####                     | Elapsed Time: 0:00:00 ETA:   0:00:00\n",
-      " 90% (10 of 11) |#####################   | Elapsed Time: 0:00:00 ETA:   0:00:00\n",
-      "100% (11 of 11) |########################| Elapsed Time: 0:00:00 Time:  0:00:00\n",
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_52330/966629948.py:18: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
-      " \n",
-      "Please do not make inferences based on these values! \n",
-      "\n",
-      "Collaborate on a solution, and stay up to date at: \n",
-      "github.com/dswah/pyGAM/issues/163 \n",
-      "\n",
-      "  gam.summary()\n"
+      "100% (11 of 11) |########################| Elapsed Time: 0:00:00 Time:  0:00:00\n"
      ]
     },
     {
@@ -244,6 +242,20 @@
       "\n",
       "\n",
       " r2 score is 0.796820943742881\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_14121/966629948.py:18: UserWarning: KNOWN BUG: p-values computed in this summary are likely much smaller than they should be. \n",
+      " \n",
+      "Please do not make inferences based on these values! \n",
+      "\n",
+      "Collaborate on a solution, and stay up to date at: \n",
+      "github.com/dswah/pyGAM/issues/163 \n",
+      "\n",
+      "  gam.summary()\n"
      ]
     },
     {
@@ -298,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +319,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
