--- a/notebooks/results/iom_exploration.ipynb
+++ b/notebooks/results/iom_exploration.ipynb
@@ -2,44 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init: process_gens_mode ['wmt_samples0', 'only_qwen_8b']\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_1000/wmt_14_language_pair_de_en_/meta_llama_Llama_3.1_8B_Instruct/1_beams/runs/sample_100_eval_1000\n",
-      "get_metrics_dict\n",
-      "calculate_gen_summary_dict\n",
-      "snellius_copies/helm_output/sample_100_eval_500_first_inst_0/wmt_14_language_pair_de_en_/Qwen_Qwen3_8B/1_beams/runs/sample_100_eval_500_first_inst_0\n",
-      "get_metrics_dict\n",
-      "Index(['example_comet', 'beam_num', 'task_name', 'model', 'example_idx',\n",
-      "       'suite', 'instanceID', 'text', 'completion_length', 'output_logprob',\n",
-      "       'isCompletion'],\n",
-      "      dtype='object')\n",
-      "Num examples: 150000\n",
-      "Num completions: 1500\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/741159948.py:34: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df[\"rank\"]=100-filtered_df[\"example_idx\"]\n",
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/741159948.py:34: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df[\"rank\"]=100-filtered_df[\"example_idx\"]\n"
+      "/opt/miniconda3/envs/crfm-helm2/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "PyTorch version 2.6.0 available.\n"
      ]
     }
    ],
@@ -64,28 +36,23 @@
     "\n",
     "\n",
     "\n",
-    "processGens=ProcessGens()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "process_gen_modes=[\"wmt_samples0\", \"only_qwen_8b\"]\n",
-    "do_norm_analysis=True\n",
-    "processGens.init_with_mode(process_gen_modes)\n",
-    "root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric = processGens.get_params()\n",
     "\n",
-    "examples_df, completions_df=get_dfs(processGens)\n",
     "\n",
-    "dfs_by_model={}\n",
-    "for model_name in examples_df['model'].unique():\n",
-    "    filtered_df = examples_df[examples_df[\"model\"]==model_name]\n",
-    "    filtered_df[\"rank\"]=100-filtered_df[\"example_idx\"]\n",
-    "    dfs_by_model[model_name]=filtered_df\n",
     "\n",
-    "all_dfs_by_model=dfs_by_model"
+    "#ok, current plan:\n",
+    "dfs_by_model,processGens,(root_folder, num_beams_list, models, custom_metrics, task_names, suite_name, instance_metrics, compare_metric)= get_dfs_by_model(process_gen_modes)\n",
+    "examples_df = pd.concat(list(dfs_by_model.values()))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +70,9 @@
       "0       0.865341         1  wmt_14_language_pair_de_en_   \n",
       "1       0.861965         1  wmt_14_language_pair_de_en_   \n",
       "\n",
-      "                              model  example_idx                 suite  \\\n",
-      "0  meta_llama_Llama_3.1_8B_Instruct            0  sample_100_eval_1000   \n",
-      "1  meta_llama_Llama_3.1_8B_Instruct            1  sample_100_eval_1000   \n",
+      "                              model  example_idx  rank                 suite  \\\n",
+      "0  meta_llama_Llama_3.1_8B_Instruct            0   100  sample_100_eval_1000   \n",
+      "1  meta_llama_Llama_3.1_8B_Instruct            1    99  sample_100_eval_1000   \n",
       "\n",
       "   instanceID                                               text  \\\n",
       "0           0  He advised the parents of a boy whose penis ha...   \n",
@@ -115,7 +82,6 @@
       "0                178       -8.308031         True  \n",
       "1                177       -8.531994         None  \n",
       "num examples 150000\n",
-      "num_completions 1500\n",
       "compare_metric mean:  example_comet    0.774351\n",
       "dtype: float64\n"
      ]
@@ -127,7 +93,7 @@
     "# instanceGeneration=get_first(processGens.first_run_instances)\n",
     "print(examples_df.head(2))\n",
     "print(\"num examples\" ,len(examples_df))\n",
-    "print(\"num_completions\", len(completions_df))\n",
+    "# print(\"num_completions\", len(completions_df))\n",
     "print(f\"compare_metric mean: \",examples_df[[compare_metric]].mean())\n",
     "#current belief: for each run_folder combo, there will be 100 instances and 100 examples per instance\n",
     "\n",
@@ -141,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,25 +184,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/1495110948.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_14033/1495110948.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  rank_df[\"output_rank\"] = rank_df.groupby(instanceID)[compare_metric].rank(ascending=False, method='first')\n",
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/1495110948.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_14033/1495110948.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  rank_df[\"output_rank\"] = rank_df[\"output_rank\"].astype(int)\n",
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/1495110948.py:13: SettingWithCopyWarning: \n",
+      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_14033/1495110948.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  rank_df[\"output_rank\"] = rank_df.groupby(instanceID)[compare_metric].rank(ascending=False, method='first')\n",
-      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_7909/1495110948.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/w4/6m47nb7x1cv2hsxbb89dmcz80000gn/T/ipykernel_14033/1495110948.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -285,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +300,7 @@
        "output_logprob       0.375145        1.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
