--- a/notebooks/misc/convert_fairseq2.ipynb
+++ b/notebooks/misc/convert_fairseq2.ipynb
@@ -246,7 +246,7 @@
     "#ensure that there are 2 outputs\n",
     "#ensure that there ids are 1749 and 3668\n",
     "\n",
-    "activation=\"sparsemax\"\n",
+    "activation=\"softmax\"\n",
     "for seed in range(100):\n",
     "    print(f\"Processing seed {seed}\")\n",
     "    fairseq_file=f\"/Users/lukecadigan/thesis/fairseq/results/iwslt/{activation}/seed_{seed}/generate-test.txt\"\n",
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 83683351 characters to snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_sparsemax/1_beams/runs/fairseq/generation_summary.json\n"
+      "Writing 90529871 characters to snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_softmax/1_beams/runs/fairseq/generation_summary.json\n"
      ]
     }
    ],
@@ -311,8 +311,8 @@
       "\n",
       "\n",
       "      \n",
-      "LOCAL_FILE=snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_sparsemax/1_beams/runs/fairseq/generation_summary.json\n",
-      "REMOTE_DIR_EXT=helm/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_sparsemax/1_beams/runs/fairseq\n",
+      "LOCAL_FILE=snellius_copies/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_softmax/1_beams/runs/fairseq/generation_summary.json\n",
+      "REMOTE_DIR_EXT=helm/helm_output/fairseq/wmt_14_language_pair_de_en_/fairseq_softmax/1_beams/runs/fairseq\n",
       "echo scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
       "scp $LOCAL_FILE lcadigan@snellius.surf.nl:~/$REMOTE_DIR_EXT\n",
       "\n"
